B&L QA/objects/SetIDBusinessUnit__c.object
<CustomObject>
    <description>NORDCSS: A reference table to associate SETIDs with Business Units.
1:n relationship from SETID to Business Unit.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <externalId>true</externalId>
        <label>Business Unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked to control which business units are available in the Business Unit Picklist in the Order Page.</description>
        <label>Order Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <label>SETID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>SetIDBusinessUnit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>SETID__c</columns>
        <columns>Order_Entry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SetID-BusinessUnit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SetIDBusinessUnits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>